--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prova-front-end</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -31,7 +32,7 @@
         </section>
      </main>
    <footer>
-     <p>&copy;2024 Minha empresa. Todos os direitos reservados.</p>
+     <p>&copy;2024 Minha empresa. Maria Clara Guilherme.</p>
    </footer>
 </body>
 </html>
